primary color revise

--- a/index.html
+++ b/index.html
@@ -508,6 +508,10 @@
     <!-- Footer -->
     <div class="bg-color">
       <div class="container py-4">
+        <!-- Spacer -->
+        <div style="height: 5vh"></div>
+        <!-- End Spacer -->
+
         <div class="row">
           <div class="col-3">
             <a class="link fs-4 fw-bold" href="/index.html">
